// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Utilities/Spacing/Padding Huge padding (96px) 1`] = `
<div
  className="SpacingDemo-outer-1639"
>
  <div
    className="NatDSSpacing-root-1640 NatDSSpacing-root-1641 SpacingDemo-root-1638"
  >
    <p
      className="MuiTypography-root SpacingDemo-inner-1637 MuiTypography-body1"
    >
      Spacing content
    </p>
  </div>
</div>
`;

exports[`Storyshots Utilities/Spacing/Padding Huge top padding (96px) 1`] = `
<div
  className="SpacingDemo-outer-1674"
>
  <div
    className="NatDSSpacing-root-1675 NatDSSpacing-root-1676 SpacingDemo-root-1673"
  >
    <p
      className="MuiTypography-root SpacingDemo-inner-1672 MuiTypography-body1"
    >
      Spacing content
    </p>
  </div>
</div>
`;

exports[`Storyshots Utilities/Spacing/Padding Large padding (64px) 1`] = `
<div
  className="SpacingDemo-outer-1644"
>
  <div
    className="NatDSSpacing-root-1645 NatDSSpacing-root-1646 SpacingDemo-root-1643"
  >
    <p
      className="MuiTypography-root SpacingDemo-inner-1642 MuiTypography-body1"
    >
      Spacing content
    </p>
  </div>
</div>
`;

exports[`Storyshots Utilities/Spacing/Padding Large right padding (64px) 1`] = `
<div
  className="SpacingDemo-outer-1679"
>
  <div
    className="NatDSSpacing-root-1680 NatDSSpacing-root-1681 SpacingDemo-root-1678"
  >
    <p
      className="MuiTypography-root SpacingDemo-inner-1677 MuiTypography-body1"
    >
      Spacing content
    </p>
  </div>
</div>
`;

exports[`Storyshots Utilities/Spacing/Padding Micro bottom padding (4px) 1`] = `
<div
  className="SpacingDemo-outer-1714"
>
  <div
    className="NatDSSpacing-root-1715 NatDSSpacing-root-1716 SpacingDemo-root-1713"
  >
    <p
      className="MuiTypography-root SpacingDemo-inner-1712 MuiTypography-body1"
    >
      Spacing content
    </p>
  </div>
</div>
`;

exports[`Storyshots Utilities/Spacing/Padding Micro padding (4px) 1`] = `
<div
  className="SpacingDemo-outer-1669"
>
  <div
    className="NatDSSpacing-root-1670 NatDSSpacing-root-1671 SpacingDemo-root-1668"
  >
    <p
      className="MuiTypography-root SpacingDemo-inner-1667 MuiTypography-body1"
    >
      Spacing content
    </p>
  </div>
</div>
`;

exports[`Storyshots Utilities/Spacing/Padding No padding (0px) 1`] = `
<div
  className="SpacingDemo-outer-1719"
>
  <div
    className="NatDSSpacing-root-1720 NatDSSpacing-root-1721 SpacingDemo-root-1718"
  >
    <p
      className="MuiTypography-root SpacingDemo-inner-1717 MuiTypography-body1"
    >
      Spacing content
    </p>
  </div>
</div>
`;

exports[`Storyshots Utilities/Spacing/Padding Semi bottom padding (32px) 1`] = `
<div
  className="SpacingDemo-outer-1689"
>
  <div
    className="NatDSSpacing-root-1690 NatDSSpacing-root-1691 SpacingDemo-root-1688"
  >
    <p
      className="MuiTypography-root SpacingDemo-inner-1687 MuiTypography-body1"
    >
      Spacing content
    </p>
  </div>
</div>
`;

exports[`Storyshots Utilities/Spacing/Padding Semi padding (32px) 1`] = `
<div
  className="SpacingDemo-outer-1649"
>
  <div
    className="NatDSSpacing-root-1650 NatDSSpacing-root-1651 SpacingDemo-root-1648"
  >
    <p
      className="MuiTypography-root SpacingDemo-inner-1647 MuiTypography-body1"
    >
      Spacing content
    </p>
  </div>
</div>
`;

exports[`Storyshots Utilities/Spacing/Padding Semi vertical padding (32px) 1`] = `
<div
  className="SpacingDemo-outer-1684"
>
  <div
    className="NatDSSpacing-root-1685 NatDSSpacing-root-1686 SpacingDemo-root-1683"
  >
    <p
      className="MuiTypography-root SpacingDemo-inner-1682 MuiTypography-body1"
    >
      Spacing content
    </p>
  </div>
</div>
`;

exports[`Storyshots Utilities/Spacing/Padding Small horizontal padding (16px) 1`] = `
<div
  className="SpacingDemo-outer-1699"
>
  <div
    className="NatDSSpacing-root-1700 NatDSSpacing-root-1701 SpacingDemo-root-1698"
  >
    <p
      className="MuiTypography-root SpacingDemo-inner-1697 MuiTypography-body1"
    >
      Spacing content
    </p>
  </div>
</div>
`;

exports[`Storyshots Utilities/Spacing/Padding Small padding (16px) 1`] = `
<div
  className="SpacingDemo-outer-1659"
>
  <div
    className="NatDSSpacing-root-1660 NatDSSpacing-root-1661 SpacingDemo-root-1658"
  >
    <p
      className="MuiTypography-root SpacingDemo-inner-1657 MuiTypography-body1"
    >
      Spacing content
    </p>
  </div>
</div>
`;

exports[`Storyshots Utilities/Spacing/Padding Small top padding (16px) 1`] = `
<div
  className="SpacingDemo-outer-1704"
>
  <div
    className="NatDSSpacing-root-1705 NatDSSpacing-root-1706 SpacingDemo-root-1703"
  >
    <p
      className="MuiTypography-root SpacingDemo-inner-1702 MuiTypography-body1"
    >
      Spacing content
    </p>
  </div>
</div>
`;

exports[`Storyshots Utilities/Spacing/Padding Standard left padding (24px) 1`] = `
<div
  className="SpacingDemo-outer-1694"
>
  <div
    className="NatDSSpacing-root-1695 NatDSSpacing-root-1696 SpacingDemo-root-1693"
  >
    <p
      className="MuiTypography-root SpacingDemo-inner-1692 MuiTypography-body1"
    >
      Spacing content
    </p>
  </div>
</div>
`;

exports[`Storyshots Utilities/Spacing/Padding Standard padding (24px) 1`] = `
<div
  className="SpacingDemo-outer-1654"
>
  <div
    className="NatDSSpacing-root-1655 NatDSSpacing-root-1656 SpacingDemo-root-1653"
  >
    <p
      className="MuiTypography-root SpacingDemo-inner-1652 MuiTypography-body1"
    >
      Spacing content
    </p>
  </div>
</div>
`;

exports[`Storyshots Utilities/Spacing/Padding Tiny padding (8px) 1`] = `
<div
  className="SpacingDemo-outer-1664"
>
  <div
    className="NatDSSpacing-root-1665 NatDSSpacing-root-1666 SpacingDemo-root-1663"
  >
    <p
      className="MuiTypography-root SpacingDemo-inner-1662 MuiTypography-body1"
    >
      Spacing content
    </p>
  </div>
</div>
`;

exports[`Storyshots Utilities/Spacing/Padding Tiny right padding (8px) 1`] = `
<div
  className="SpacingDemo-outer-1709"
>
  <div
    className="NatDSSpacing-root-1710 NatDSSpacing-root-1711 SpacingDemo-root-1708"
  >
    <p
      className="MuiTypography-root SpacingDemo-inner-1707 MuiTypography-body1"
    >
      Spacing content
    </p>
  </div>
</div>
`;
